Alpha 1.1 - Route pattern matching fixes. 	- #place# is surrounded by a white space (avoid matching stuff like “water waterloo”) - Link to original FB post added. - Minor UI refinements.

--- a/public/index.css
+++ b/public/index.css
@@ -9,13 +9,24 @@ label {
     font-family: 'Raleway', sans-serif;
 }
 
+.link-span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
 .logo {
     width: 40%;
+    max-width: 320px;
     display: block;
     margin: 32px auto;
 }
 
 .carpool-cell-container {
+    position: relative;
     background-color: #fff;
     border-radius: 6px;
     border: 2px solid #5BC0BE;
